Implemented the basics of the dice game
TODO: 
- Add elimination phase
- Improve end score string (player order)

--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Translator.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.13.0" />
   </ItemGroup>
 
