--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,12 +31,20 @@ jobs:
         path: /home/runner/work/DanielDiscordBot/DanielDiscordBot/release/
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Generate release tag
+      id: generate_release_tag
+      uses: amitsingh-007/next-release-tag@v5.0.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        tag_prefix: 'v'
+        tag_template: 'yyyy.mm.dd.i'
     - name: Create release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ github.sha }}
+        tag: ${{ steps.generate_release_tag.outputs.next_release_tag }}
+        sha: ${{ github.sha }}
       run: |
-        gh release create \
+        gh release create "$tag" \
           --repo="$GITHUB_REPOSITORY" \
-          --title="${GITHUB_REPOSITORY#*/} $tag" \
+          --title="${GITHUB_REPOSITORY#*/} $tag ($sha)" \
           --generate-notes
