--- a/DiscordBot/DiscordBot.csproj
+++ b/DiscordBot/DiscordBot.csproj
@@ -19,4 +19,7 @@
     <PackageReference Include="Python.Runtime" Version="2.7.9" />
   </ItemGroup>
 
+  <ItemGroup>
+           <Content Include="TranslationHandler.py" Link="TranslationHandler.py" CopyToOutputDirectory="PreserveNewest" />
+   </ItemGroup>
 </Project>
