--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Application_Artifact
-        path: /home/runner/work/DanielDiscordBot/DanielDiscordBot/release/
+        path: /home/runner/work/$GITHUB_REPOSITORY/$GITHUB_REPOSITORY/release/
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Generate release tag
