--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,13 +26,8 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet publish --no-restore --runtime linux-arm64 --self-contained -c Release -o release
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: Application_Artifact
-        path: ${{ github.workspace }}/release/
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Create release zip
+      run: zip release.zip release/* -r
     - name: Generate release tag
       id: generate_release_tag
       uses: amitsingh-007/next-release-tag@v5.0.0
@@ -51,4 +46,4 @@ jobs:
         gh release create "$tag" \
           --repo="$GITHUB_REPOSITORY" \
           --title="${GITHUB_REPOSITORY#*/} $tag ($sha)" \
-          --generate-notes 
+          --generate-notes release.zip
