--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Release .NET 6.0 Linux ARM64
+name: Release
 
 on:
   push:
@@ -26,10 +26,14 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet publish --no-restore --runtime linux-arm64 --self-contained -c Release -o release
+    - name: Build ARM64
+      run: dotnet publish --no-restore --runtime linux-arm64 --self-contained -c Release -o release_arm64
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build Linux x64
+      run: dotnet publish --no-restore --runtime linux-x64 --self-contained -c Release -o release_linux_x64
     - name: Create release zip
-      run: zip release.zip release/* -r
+      run: zip release.zip release* -r
     - name: Generate release tag
       id: generate_release_tag
       uses: amitsingh-007/next-release-tag@v5.0.0
