--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,16 +24,19 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
+    - name: Build linux-arm64
       run: dotnet restore
-    - name: Build ARM64
-      run: dotnet publish --no-restore --runtime linux-arm64 --self-contained -c Release -o release_arm64
-    - name: Restore dependencies
+      run: dotnet publish --no-restore --runtime linux-arm64 --self-contained -c Release -o release_linux_arm64
+    - name: Build linux-x64
       run: dotnet restore
-    - name: Build Linux x64
       run: dotnet publish --no-restore --runtime linux-x64 --self-contained -c Release -o release_linux_x64
-    - name: Create release zip
-      run: zip release.zip release* -r
+    - name: Build win-x64
+      run: dotnet restore
+      run: dotnet publish --no-restore --runtime win-x64 --self-contained -c Release -o release_win_x64
+    - name: Create release zips
+      run: zip release-linux-x64.zip release_linux_x64/* -r
+      run: zip release-linux-arm64.zip release_linux_arm64/* -r
+      run: zip release-win-x64.zip release_win_x64/* -r
     - name: Generate release tag
       id: generate_release_tag
       uses: amitsingh-007/next-release-tag@v5.0.0
@@ -52,4 +55,4 @@ jobs:
         gh release create "$tag" \
           --repo="$GITHUB_REPOSITORY" \
           --title="${GITHUB_REPOSITORY#*/} $tag ($sha)" \
-          --generate-notes release.zip
+          --generate-notes release-linux-x64.zip release-linux-arm64.zip release-win-x64.zip
